# jdlib

./: .gitignore  README.md  pom.xml
.github/md/: README.md
examples/: pom.xml
examples/src/main/java/io/metaloom/jdlib/examples/clustering/: FacesClustering.java  Launcher.java
examples/src/main/java/io/metaloom/jdlib/examples/cnn/: CNNFaceDetectExample.java
examples/src/main/java/io/metaloom/jdlib/examples/landmark/: CNNFaceDetectExample.java  FacialLandmarksExample.java
jni/: CMakeLists.txt  handlers.cpp  handlers.hpp  io_metaloom_jdlib_Jdlib.h  jdlib.cpp  utils.cpp  utils.hpp
src/main/java/io/metaloom/jdlib/: Jdlib.java
src/main/java/io/metaloom/jdlib/util/: FaceDescriptor.java  Image.java  ImageUtils.java
